--- a/Выпускная работа/css/style.css
+++ b/Выпускная работа/css/style.css
@@ -394,7 +394,7 @@ h1 {
 /* line 357, style.less */
 .nav-tabs {
   text-align: center;
-  margin-left: 0;
+  margin: 0px;
 }
 /* line 361, style.less */
 .etapi li {
@@ -497,13 +497,14 @@ h1 {
 /* line 443, style.less */
 .nav-tabs {
   border-bottom: 0px solid #ddd;
-  margin-left: 20%;
+  margin-left: 0%;
+  padding-left: 15%;
 }
-/* line 447, style.less */
+/* line 448, style.less */
 .nav-tabs > li > a {
   margin-right: 0px;
 }
-/* line 451, style.less */
+/* line 452, style.less */
 .btn-default:active {
   background-color: black;
   color: white;
