--- a/Выпускная работа/css/style.css
+++ b/Выпускная работа/css/style.css
@@ -410,101 +410,116 @@ h1 {
 .etapi-step > span {
   color: grey;
 }
-/* line 373, style.less */
+/* line 372, style.less */
+#chto_eshe {
+  font-size: 35pt;
+}
+/* line 375, style.less */
+.predlogenie {
+  background-image: url(../img/predlogenie/fon.png);
+  width: 100%;
+  height: 650px;
+  background-size: cover;
+}
+/* line 381, style.less */
 .predlogenie-p {
   font-size: 12px;
   font-weight: 100;
   text-decoration: underline;
   color: grey;
+  text-align: left;
 }
-/* line 379, style.less */
+/* line 388, style.less */
 .predlogenie-fon {
-  background-size: cover;
   height: 200px;
+  width: 100%;
+  background-size: cover;
 }
-/* line 383, style.less */
+/* line 393, style.less */
 .predlogenie-img {
   position: absolute;
   top: 0;
   right: 0;
 }
-/* line 388, style.less */
+/* line 398, style.less */
 .predlogenie-button {
   position: relative;
   top: 120px;
   left: -49%;
 }
-/* line 393, style.less */
+/* line 403, style.less */
 .predlogenie-span {
   left: -50%;
+  padding-top: 35px;
+  float: left;
 }
-/* line 397, style.less */
+/* line 409, style.less */
 .footer {
   padding: 50px 0px;
   line-height: 150px;
 }
-/* line 400, style.less */
+/* line 412, style.less */
 .footer-span {
   font-size: 14px;
   font-weight: 100;
   color: grey;
 }
-/* line 405, style.less */
+/* line 417, style.less */
 .footer-p {
   font-size: 16px;
   font-weight: 100;
   color: grey;
 }
-/* line 410, style.less */
+/* line 422, style.less */
 .footer-phone {
   text-decoration: underline;
   color: black;
   font-weight: 900;
   font-size: 17px;
 }
-/* line 417, style.less */
+/* line 429, style.less */
 .tab {
   margin-right: 0px;
   margin: 0 auto;
 }
-/* line 420, style.less */
+/* line 432, style.less */
 .tab-a {
   text-decoration: none;
   padding: 0px;
   margin: 0px;
   border: 0px;
 }
-/* line 425, style.less */
+/* line 437, style.less */
 .tab-a:hover {
   color: white;
   background-color: #fe5c2e;
 }
-/* line 430, style.less */
+/* line 442, style.less */
 .tab-li {
   height: 100%;
   padding: 0;
   margin: 0;
   border: 0px;
 }
-/* line 437, style.less */
+/* line 449, style.less */
 .nav li a {
   padding: 0px;
 }
-/* line 440, style.less */
+/* line 452, style.less */
 .btn-default {
   margin-right: 0;
 }
-/* line 443, style.less */
+/* line 455, style.less */
 .nav-tabs {
   border-bottom: 0px solid #ddd;
   margin-left: 0%;
   padding-left: 15%;
 }
-/* line 448, style.less */
+/* line 460, style.less */
 .nav-tabs > li > a {
   margin-right: 0px;
 }
-/* line 452, style.less */
+/* line 464, style.less */
 .btn-default:active {
   background-color: black;
   color: white;
