--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -36,13 +36,14 @@ i{
 	&-ssilka{
 		text-decoration: none;
 		color: grey;
+
 		&:hover{
 			color:grey;
 			text-decoration: none;
 		}
 	}
 	&-spisok{
-		padding-top: 15px;
+		margin-top: 20px;
 	}
 	&-soc {
 		text-align: right;
@@ -55,6 +56,10 @@ i{
 	&-fon{
 		background: url(../img/fon2.png) no-repeat center center;
 		background-size: cover;
+		text-align: center;
+		width: 1242px;
+		height: 590px;
+
 	}
 	&-spisok1 {
 		display: inline-block;
@@ -158,7 +163,7 @@ h1 {
 		margin-top: 20px;
 	}
 	&-zadacha {
-			
+
 	}
 	&-razvernut {
 		color: @orange;
@@ -181,7 +186,7 @@ h1 {
 	}
 }
 .hidden {
-  display: none
+	display: none
 }
 .erp-p {
 	font-size: 18px;
@@ -203,18 +208,18 @@ h1 {
 
 	&-a{
 		vertical-align: middle;
-		 background-image: url(../img/sistemi/icon.png);
-		 background-repeat: no-repeat;
-		 margin-bottom: 15px;
-		 height: 22px;
-		 color: black;
-		 display: inline-block;
-		 &:hover{
-		 	color:black;
-		 	text-decoration: none;
+		background-image: url(../img/sistemi/icon.png);
+		background-repeat: no-repeat;
+		margin-bottom: 15px;
+		height: 22px;
+		color: black;
+		display: inline-block;
+		&:hover{
+			color:black;
+			text-decoration: none;
 
-		 	background-image: url(../img/sistemi/iconactive.png);
-		 }
+			background-image: url(../img/sistemi/iconactive.png);
+		}
 	}
 }
 
@@ -265,9 +270,9 @@ h1 {
 }
 .feedback{
 	&-img{
-	height: 60px;
-	padding: 15px 0;
-	margin: 15px 10px;
+		height: 60px;
+		padding: 15px 0;
+		margin: 15px 10px;
 	}
 	&-block {
 		height: 200px;
@@ -283,20 +288,78 @@ h1 {
 	margin: 55px 0px;
 	margin-bottom: 75px;
 }
-.etapi{	
+.active{
+	border: none;
+}
+.etapi{
+	&-1:hover{
+		background-color:#fff;
+		height: 250px;
+	}
+	&-2:hover{
+		background-color:#fff;
+		height: 250px;
+	}
+	&-3:hover{
+		background-color:#fff;
+		height: 250px;
+	}
+	&-4:hover{
+		background-color:#fff;
+		height: 250px;
+	}
+	&-5:hover{
+		background-color:#fff;
+		height: 250px;
+	}
+	&-1{
+		height: 250px;
+	}
+
 	&-h4{
+		font-weight: 600;
+		
+	}
+	li{
+		border: none;
+	}
+	&-a{
+		border: none;
+		color: black;
+		&:hover{
+			border: none;
+		}
+		&:active{
+			border: none;
+		}
+	}
+}
+.tab-pane active{
+	background-color: #fff;
+}
+.step{
+	display: inline-block;
+	margin: 0;
+	padding: 22px;	
+	background-color: #fff;
+	height: 150px;
+	width: 25%;
+	& span{
+
+		font-size: 16px;
 		font-weight: 700;
 	}
-	&-4etap{
-		background-color: #fff;
-		height: 300px;
+	&-p{
+		padding-top: 15px;
 	}
-	&-step{
-		margin: 0;
-		padding: 15px;
-		background-color: #fff;
-		height: 150px;
-	}
+}
+
+.nav-tabs{
+	text-align: center;
+	margin: 0px;
+}
+.etapi li {
+	text-align: center;
 }
 .etapi-step>h4 {
 	font-size: 18px;
@@ -306,51 +369,28 @@ h1 {
 .etapi-step>span{
 	color: grey;
 }
-.predlogenie{
-	&-p{
-	font-size: 12px;
-	font-weight: 100;
-	text-decoration: underline;
-	color: grey;	
-	}
-	&-fon{
-		background: url(../img/predlogenie/fon.png) no-repeat center center;
-		background-size: cover;
-		background-color: #fff;
-		height: 286px;
-	}
-	&-img{
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
-	&-button {
-		position: relative;
-		top: 120px;
-		left: -52%;
-	}
-	&-span {
-		left: -55%;
-	}
+#chto_eshe{
+	font-size: 35pt;
 }
+
 .footer{
-	padding: 50px 0px;
+	padding: 0px 0px;
+	line-height: 50px;
 	&-span{
-	font-size: 14px;
-	font-weight: 100;
-	color: grey;
-}
-&-p{
-	font-size: 16px;
-	font-weight: 100;
-	color: grey;
-}
-&-phone {
-	text-decoration: underline;
-	color: black;
-	font-weight: 900;
-	font-size: 17px;
-}
+		font-size: 14px;
+		font-weight: 100;
+		color: grey;
+	}
+	&-p{
+		font-size: 16px;
+		font-weight: 100;
+		color: grey;
+	}
+	&-phone{
+		color: black;
+		font-weight: 900;
+		font-size: 17px;
+	}
 }
 .tab {
 	margin-right: 0px;
@@ -373,20 +413,98 @@ h1 {
 	}
 }
 .nav li a {
-    padding: 0px;
+	padding: 0px;
 }
 .btn-default {
 	margin-right: 0;
 }
 .nav-tabs {
-    border-bottom: 0px solid #ddd;
-    margin-left: 20%;
+	border-bottom: 0px solid #ddd;
+	margin-left: 0%;
+	padding-left: 15%;
 }
 .nav-tabs>li>a {
-     margin-right: 0px; 
-    
+	margin-right: 0px; 
+
 }
 .btn-default:active{
 	background-color: black;
 	color: white;
 }
+.nam-doveryaut{
+	&-fon{
+		background-image: url(../img/predlogenie/fon.png);
+		-webkit-background-size: cover;
+		background-size: cover;
+		width: 100%;
+
+	}
+	&-h1{
+		margin-top: 95px;
+		padding: 20px;
+		padding-bottom: 0;
+	}
+	&-img{
+		display: block;
+		margin: 0 auto;
+		padding-bottom: 100px;
+	}
+}
+.zakazat-text1{
+	color: @orange;
+	margin-top: 35px;
+	padding-left: 20px;
+}
+.eshe p {
+	font-size: 12px;
+	line-height: 12px;
+	text-decoration: underline;
+	color: black;	
+}
+.btn-primary {
+background-color: @orange;
+	border-radius: 10px;
+	height: 60px;
+	width: 270px;
+	
+	color: white;
+	cursor: pointer;
+	border: none;
+	}
+
+	.popup{
+		width: 333px;
+		height: 444px;
+		background-color: white;
+		position: fixed;
+		left: 50%;
+		transform: translateX(-50%) translateY(-170%);
+		top: 25%;
+		transition: all 0.2s;
+		opacity: 1;
+		z-index: 999;
+			&:target{
+				transform: translateX(-50%) translateY(0%);
+				box-shadow: 0 0 10px rgba(0,0,0,0.5);
+			}
+		&-close{
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			text-decoration: none;
+			font-size: 2rem;
+			color: black;
+		}
+	}
+	.popup h4 {
+		margin-top: 40px;
+		margin-bottom: 23px;
+		font-weight: 700;
+	}
+	.popup input{
+		padding: 15px;
+		border: 2px solid @orange;
+		border-radius: 5px;
+		margin: 2px;
+		display: inline-block;
+	}
