--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -486,6 +486,8 @@ background-color: @orange;
 			&:target{
 				transform: translateX(-50%) translateY(0%);
 				box-shadow: 0 0 10px rgba(0,0,0,0.5);
+				border: 1px solid white;
+				border-radius: 12px;
 			}
 		&-close{
 			position: absolute;
